# enki

./: Cargo.toml  README.md
src/: app.rs  main.rs
src/agent/: context.rs  conversation.rs  handle.rs  loop.rs  mod.rs  system_prompt.rs
src/config/: settings.rs
src/daemon/: client.rs  lifecycle.rs  mod.rs  protocol.rs  server.rs  session.rs
src/llm/: capabilities.rs  client.rs  mod.rs  stream.rs  types.rs
src/tools/: bash.rs  completion.rs  directory.rs  file_edit.rs  file_read.rs  file_write.rs  mod.rs  search.rs  types.rs
src/tui/: chat.rs  input.rs  layout.rs  mod.rs  status.rs
